kubernetes/frank/service-syncthing-gui.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: frank-syncthing-gui

spec:
  selector:
    app.kubernetes.io/name: frank
    app.kubernetes.io/instance: frank
  ports:
  - port: 8384
    targetPort: 8384
    protocol: TCP
    name: syncthing-gui
