kubernetes/frank/service-syncthing.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: frank-syncthing
  annotations:
    external-dns.alpha.kubernetes.io/hostname: frank-sync.k.oneill.net

spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: frank
    app.kubernetes.io/instance: frank
  ports:
  - port: 22000
    targetPort: sync
    protocol: TCP
    name: sync-tcp
  - port: 22000
    targetPort: 22000
    protocol: UDP
    name: sync-udp
