kubernetes/frank/service-www.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: frank-www

spec:
  selector:
    app.kubernetes.io/name: frank
    app.kubernetes.io/instance: frank
  ports:
  - port: 8080
    targetPort: www
    protocol: TCP
    name: www
