kubernetes/frank/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: frank

spec:
  selector:
    app.kubernetes.io/name: frank
    app.kubernetes.io/instance: frank
  ports:
  - name: gateway
    protocol: TCP
    port: 18789
