kubernetes/frank/ingress-syncthing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frank-syncthing
  namespace: frank
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ak-type: simple

spec:
  tls:
  - hosts:
    - frank-syncthing.k.oneill.net
    secretName: frank-syncthing-tls
  rules:
  - host: frank-syncthing.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frank-syncthing-gui
            port:
              number: 8384
