kubernetes/frank/ingress-www.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frank-www
  namespace: frank
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ak-type: simple
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Frank
    gethomepage.dev/description: Personal Assistant
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-cash-multiple
    gethomepage.dev/pod-selector: app.kubernetes.io/name=frank

spec:
  tls:
  - hosts:
    - frank.k.oneill.net
    secretName: frank-www-tls
  rules:
  - host: frank.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frank-www
            port:
              number: 8080
